tons of changes, mobile friendly

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- <button>DOWNLOAD RESUME</button> -->
     </div>
 </header>
-<section id="laptop"><img src="assets/imgs/laptop.jpg" alt="" id="laptop-image">
+<section id="laptop"><img src="assets/imgs/laptop.jpg" alt="" class="laptop-image responsive"">
     <p class="bold">"It’s not a bug – it’s an undocumented feature." </p>
 </section>
 <section id="about">
@@ -107,71 +107,80 @@
     <!-- First Row -->
     <div class="portfolio-container">
         <!-- One Nine One Website -->
-        <div class="portfolio-item-1"><img src="assets/imgs/one-nine-one-website.jpg" alt="" class="portfolio-image">
-            <a href="https://www.onenine.one" target="_blank">
-                <div class="overlay">
-                    <div class="text">One Nine One Motorsports</div>
-                    <a href="https://github.com/dhrandy/onenineone-racing" target="_blank">
-                        <p><button class="button button1">Code</button></p>
-                    </a>
-                </div>
-            </a>
+        <div class="portfolio-item-1">
+            <img src="assets/imgs/one-nine-one-website.jpg" alt="" class="portfolio-image">
+            <div class="overlay">
+                <div class="text">One Nine One Motorsports</div>
+                <a href="https://github.com/dhrandy/onenineone-racing" target="_blank">
+                    <button class="button button1 button-code">CODE</button>
+                </a>
+                <a href="https://www.onenine.one" target="_blank">
+                    <button class="button button1 button-site">SITE</button>
+                </a>
+            </div>
         </div>
         <!-- HVAC Website -->
         <div class="portfolio-item-2"><img src="assets/imgs/HVAC-website.jpg" alt="" class="portfolio-image">
-            <a href="https://randy-gentry.com/HVAC-website/" target="_blank">
-                <div class="overlay">
-                    <div class="text">HVAC Site</div>
-                    <a href="https://github.com/dhrandy/HVAC-website" target="_blank">
-                        <p><button class="button button1">Code</button></p>
-                    </a>
-                </div>
-            </a></div>
+            <div class="overlay">
+                <div class="text">HVAC Site</div>
+                <a href="https://github.com/dhrandy/HVAC-website" target="_blank">
+                    <button class="button button1 button-code">CODE</button>
+                </a>
+                <a href="https://randy-gentry.com/HVAC-website/" target="_blank">
+                    <p><button class="button button1 button-site">SITE</button></p>
+                </a>
+            </div>
+        </div>
         <!-- Forever May Fall Website -->
         <div class="portfolio-item-3"><img src="assets/imgs/forevermayfall-website.jpg" alt="" class="portfolio-image">
-            <a href="https://randy-gentry.com/forevermayfall-website/" target="_blank">
-                <div class="overlay">
-                    <div class="text">Forever May Fall</div>
-                    <a href="https://github.com/dhrandy/forevermayfall-website" target="_blank">
-                        <p><button class="button button1">Code</button></p>
-                    </a>
-                </div>
-            </a>
+            <div class="overlay">
+                <div class="text">Forever May Fall</div>
+                <a href="https://github.com/dhrandy/forevermayfall-website" target="_blank">
+                    <button class="button button1 button-code">CODE</button>
+                </a>
+                <a href="https://randy-gentry.com/forevermayfall-website/" target="_blank">
+                    <button class="button button1 button-site">SITE</button>
+                </a>
+            </div>
         </div>
     </div>
     <!-- Second Row -->
     <div class="portfolio-container">
         <!-- Handy Soaps Website -->
         <div class="portfolio-item-4"><img src="assets/imgs/handy-soaps-website.jpg" alt="" class="portfolio-image">
-            <a href="https://randy-gentry.com/handysoaps/" target="_blank">
                 <div class="overlay">
                     <div class="text">Handy Soaps</div>
                     <a href="https://github.com/dhrandy/handysoaps" target="_blank">
-                        <p><button class="button button1">Code</button></p>
+                        <button class="button button1 button-code">CODE</button>
+                    </a>
+                    <a href="https://randy-gentry.com/handysoaps/" target="_blank">
+                        <button class="button button1 button-site">SITE</button>
                     </a>
                 </div>
-            </a>
         </div>
         <!-- Bird Dog Leatherworks Website -->
         <div class="portfolio-item-5"><img src="assets/imgs/bird-dog-website.jpg" alt="" class="portfolio-image">
-            <a href="https://randy-gentry.com/bird-dog-website/" target="_blank">
-                <div class="overlay">
-                    <div class="text">Bird Dog Leatherworks</div>
-                    <a href="https://github.com/dhrandy/bird-dog-website" target="_blank">
-                        <p><button class="button button1">Code</button></p>
-                    </a>
-                </div>
-            </a></div>
+            <div class="overlay">
+                <div class="text">Bird Dog Leatherworks</div>
+                <a href="https://github.com/dhrandy/bird-dog-website" target="_blank">
+                    <button class="button button1 button-code">CODE</button>
+                </a>
+                <a href="https://randy-gentry.com/bird-dog-website/" target="_blank">
+                    <button class="button button1 button-site">SITE</button>
+                </a>
+            </div>
+        </div>
         <!-- D&R Cable Website -->
         <div class="portfolio-item-6"><img src="assets/imgs/dandrcable-website.jpg" alt="" class="portfolio-image">
-            <a href="https://www.randy-gentry.com/D-R-Website/" target="_blank">
-                <div class="overlay">
-                    <div class="text">D&R Cable</div>
-                    <a href="https://github.com/dhrandy/D-R-Website" target="_blank">
-                        <p><button class="button button1">Code</button></p>
-                    </a>
-                </div>
-            </a>
+            <div class="overlay">
+                <div class="text">D&R Cable</div>
+                <a href="https://github.com/dhrandy/D-R-Website" target="_blank">
+                    <button class="button button1 button-code">CODE</button>
+                </a>
+                <a href="https://www.randy-gentry.com/D-R-Website/" target="_blank">
+                    <button class="button button1 button-site">SITE</button>
+                </a>
+            </div>
         </div>
     </div>
 </section>
@@ -229,28 +238,27 @@
 </section>
 <!-- ====Footer==== -->
 <footer id="footer-section">
-        <div class="footer-social-spacing">
-            <a href="https://www.facebook.com/dhrandy" class="fab fa-facebook-f social-footer foot-icon"
-                target="_blank"></a>
-            <a href="https://www.twitter.com/dhrandy" class="fab fa-twitter social-footer foot-icon"
-                target="_blank"></a>
-            <a href="https://www.linkedin.com/in/dhrandy/" class="fab fa-linkedin social-footer foot-icon"
-                target="_blank"></a>
-            <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon" target="_blank"></a>
+    <div class="footer-social-spacing">
+        <a href="https://www.facebook.com/dhrandy" class="fab fa-facebook-f social-footer foot-icon"
+            target="_blank"></a>
+        <a href="https://www.twitter.com/dhrandy" class="fab fa-twitter social-footer foot-icon" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/dhrandy/" class="fab fa-linkedin social-footer foot-icon"
+            target="_blank"></a>
+        <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon" target="_blank"></a>
+    </div>
+    <div class="center">
+        <div class="footer-link">
+            <a href="#home">HOME</a>
+            <a href="#knowledge">KNOWLEDGE</a>
+            <a href="#portfolio">PORTFOLIO</a>
+            <a href="#hobby">HOBBIES</a>
+            <a href="#contact">CONTACT</a>
         </div>
-        <div class="center">
-            <div class="footer-link">
-                <a href="#home">HOME</a>
-                <a href="#knowledge">KNOWLEDGE</a>
-                <a href="#">PORTFOLIO</a>
-                <a href="#hobby">HOBBIES</a>
-                <a href="#contact">CONTACT</a>
-            </div>
-        </div>
-        <div class="footer">
-            © 2018 | Designed by Randy Gentry |
-            <a href="https://github.com/dhrandy/dhrandy.github.io" class="github-link">See My Code</a>
-        </div>
+    </div>
+    <div class="footer">
+        © 2018 | Designed by Randy Gentry |
+        <a href="https://github.com/dhrandy/dhrandy.github.io" class="github-link">See My Code</a>
+    </div>
 </footer>
 
 </html>
