updated mobile responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <li class="link link-1"><a href="#about">ABOUT</a></li>
             <li class="link link-2"><a href="#knowledge">KNOWLEDGE</a></li>
             <li class="link link-3"><a href="#portfolio">PORTFOLIO</a></li>
-            <LI class="link link-4"><a href="#hobbies">HOBBIES</a></LI>
+            <li class="link link-4"><a href="#hobbies">HOBBIES</a></li>
+            <li class="link link-5"><a href="#hobbies">CONTACT</a></li>
         </ul>
     </nav>
     <div class="hero-text">
@@ -41,7 +42,7 @@
     </div>
 </header>
 <section id="laptop"><img src="assets/imgs/laptop.jpg" alt="" class="laptop-image responsive"">
-    <p class="bold">"It’s not a bug – it’s an undocumented feature." </p>
+    <p class=" bold">"It’s not a bug – it’s an undocumented feature." </p>
 </section>
 <section id="about">
     <div class="title">
@@ -52,9 +53,9 @@
             <img src="assets/imgs/me-about.jpg" alt="" id="image-about">
         </div>
         <div class="box-about-right">
-            <p class="bold">Meet Randy Gentry!</p>
+            <p class="bold meet-description">Meet Randy Gentry!</p>
 
-            <p> I am a web developer who has skills in both the back-end of web applications and the front-end. I have
+            <p class="meet-description"> I am a web developer who has skills in both the back-end of web applications and the front-end. I have
                 experience working in a dynamic corporate environment closely with design engineers. Working with those
                 engineers influenced my decision to become a web developer to create web products and solve problems.
             </p>
@@ -90,7 +91,7 @@
                 <h1>KNOWLEDGE</h1>
             </div>
             <p class="center bold knowledge">Knowledge is Power</p>
-            <p>I use HTML 5, CSS (Bootstrap, Semantic-UI, and others), Javascript (ReactJS, Node, Express, and
+            <p class="knowledge-description">I use HTML 5, CSS (Bootstrap, Semantic-UI, and others), Javascript (ReactJS, Node, Express, and
                 Handlebars just to name a few), and for databases, MySQL, Firebase, and MongoDB. If none of this makes
                 sense to you, that's OK.</p>
         </div>
@@ -101,7 +102,7 @@
         <h1>PORTFOLIO</h1>
     </div>
     <div class="center portfolio-info">
-        <p>Checkout my Github page for all my projects <a href="https://github.com/dhrandy/" target="_blank">here</a>.
+        <p class="portfolio-description">Checkout my Github page for all my projects <a href="https://github.com/dhrandy/" target="_blank">here</a>.
             Click on the image to go to the URL, click on the button within the image to view the code.</p>
     </div>
     <!-- First Row -->
@@ -143,20 +144,20 @@
                 </a>
             </div>
         </div>
-    </div>
-    <!-- Second Row -->
-    <div class="portfolio-container">
+        <!-- </div> -->
+        <!-- Second Row -->
+        <!-- <div class="portfolio-container"> -->
         <!-- Handy Soaps Website -->
         <div class="portfolio-item-4"><img src="assets/imgs/handy-soaps-website.jpg" alt="" class="portfolio-image">
-                <div class="overlay">
-                    <div class="text">Handy Soaps</div>
-                    <a href="https://github.com/dhrandy/handysoaps" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
-                    </a>
-                    <a href="https://randy-gentry.com/handysoaps/" target="_blank">
-                        <button class="button button1 button-site">SITE</button>
-                    </a>
-                </div>
+            <div class="overlay">
+                <div class="text">Handy Soaps</div>
+                <a href="https://github.com/dhrandy/handysoaps" target="_blank">
+                    <button class="button button1 button-code">CODE</button>
+                </a>
+                <a href="https://randy-gentry.com/handysoaps/" target="_blank">
+                    <button class="button button1 button-site">SITE</button>
+                </a>
+            </div>
         </div>
         <!-- Bird Dog Leatherworks Website -->
         <div class="portfolio-item-5"><img src="assets/imgs/bird-dog-website.jpg" alt="" class="portfolio-image">
@@ -191,6 +192,8 @@
         <p class="center hobbies-description">Here are a few of my hobbies.</p>
     </div>
     <div class="hobbies-container">
+    <div class="hobbies-column-1">
+    
         <div class="hobbies-item-1 hobbies-items"><img src="assets/imgs/classic.jpg" alt="" class="image-hobbies">
             <div class="overlay-hobbies">
                 <div class="text-hobbies">Classic Car</div>
@@ -202,6 +205,8 @@
                 <div class="text-hobbies">Photography</div>
             </div>
         </div>
+    </div>
+    <div class="hobbies-column-1">
         <div class="hobbies-item-3 hobbies-items"><img src="assets/imgs/hobby-guitar.jpg" alt="" class="image-hobbies">
             <div class="overlay-hobbies">
                 <div class="text-hobbies">Guitars</div>
@@ -213,6 +218,9 @@
                 <div class="text-hobbies">Computers</div>
             </div>
         </div>
+        </div>
+
+
     </div>
 </section>
 <!-- Contact Section -->
@@ -239,8 +247,6 @@
 <!-- ====Footer==== -->
 <footer id="footer-section">
     <div class="footer-social-spacing">
-        <a href="https://www.facebook.com/dhrandy" class="fab fa-facebook-f social-footer foot-icon"
-            target="_blank"></a>
         <a href="https://www.twitter.com/dhrandy" class="fab fa-twitter social-footer foot-icon" target="_blank"></a>
         <a href="https://www.linkedin.com/in/dhrandy/" class="fab fa-linkedin social-footer foot-icon"
             target="_blank"></a>
