Too many updates to list

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 
+==============================================================    
+Welcome to my html code!
+Designed and edited by Randy Gentry.
+==============================================================  
+-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Randy Gentry's Portfolio</title>
-    <meta name="description" content="">
+    <title>Randy Gentry's Full-stack Web Developer Portfolio</title>
+    <meta name="description" content="Randy Gentry's Full-stack Web Development Portfolio. Here you'll find information about me, my digital downloadable resume, and my portfolio, as well as a way to contact me.">
+    <meta name="keywords" content="graphic design, website builder, webdesign, web design company, website creator, website designer, responsive web design, mobile website design, Web Developer, HTML, JavaScript, Front-end, Back-end, Front End, Back End, Website Builder, Website Developer, Create a Website, Design a Website, Web Design, Randy Gentry, randy-gentry">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- ====Font Awesome CSS==== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +23,6 @@
 </head>
 
 <body>
-    <!-- <script src="" async defer></script> -->
 
     <header class="hero-image" id="home">
         <!-- <nav>
@@ -34,16 +39,16 @@
         </nav> -->
         <div class="center">
             <div class="topnav" id="myTopnav">
-                    <a href="#about">ABOUT</a>
-              <a href="#knowledge">KNOWLEDGE</a>
-              <a href="#portfolio">PORTFOLIO</a>
-              <a href="#hobbies">HOBBIES</a>
-              <a href="contact">CONTACT</a>
-              <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-              </a>
+                <a href="#about">ABOUT</a>
+                <a href="#knowledge">KNOWLEDGE</a>
+                <a href="#portfolio">PORTFOLIO</a>
+                <a href="#hobbies">HOBBIES</a>
+                <a href="#contact">CONTACT</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </div>
-            </div>
+        </div>
         <div class="hero-text">
 
             <img id="me-image-header" src="assets/imgs/me.jpg" />
@@ -76,6 +81,11 @@
                     those
                     engineers influenced my decision to become a web developer to create web products and solve
                     problems.
+                </p>
+                <p class="button-about">
+                    <a href="assets/docs/RandyGentryDigtialResume.pdf" download>
+                        <button type="button" class="button button-border">Download Digital Resume</button>
+                    </a>
                 </p>
             </div>
         </div>
@@ -124,12 +134,9 @@
         <div class="title">
             <h1>PORTFOLIO</h1>
         </div>
-        <div class="center portfolio-info">
-            <p class="portfolio-description">Checkout my Github page for all my projects <a
-                    href="https://github.com/dhrandy/" target="_blank">here</a>.
-                Click on the image to go to the URL, click on the button within the image to view the code.</p>
-        </div>
-        <!-- First Row -->
+        <p class="center portfolio-description">Checkout my Github page for all my projects
+            <a href="https://github.com/dhrandy/" target="_blank">here</a>.
+            Click on the image to go to the URL, click on the button within the image to view the code.</p>
         <div class="portfolio-container">
             <!-- One Nine One Website -->
             <div class="portfolio-item-1">
@@ -137,10 +144,10 @@
                 <div class="overlay">
                     <div class="text">One Nine One Motorsports</div>
                     <a href="https://github.com/dhrandy/onenineone-racing" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
+                        <button class="button button-border button-position button-code">CODE</button>
                     </a>
                     <a href="https://www.onenine.one" target="_blank">
-                        <button class="button button1 button-site">SITE</button>
+                        <button class="button button-border  button-position button-site">SITE</button>
                     </a>
                 </div>
             </div>
@@ -149,10 +156,10 @@
                 <div class="overlay">
                     <div class="text">HVAC Site</div>
                     <a href="https://github.com/dhrandy/HVAC-website" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
+                        <button class="button button-border button-position button-code">CODE</button>
                     </a>
                     <a href="https://randy-gentry.com/HVAC-website/" target="_blank">
-                        <p><button class="button button1 button-site">SITE</button></p>
+                        <p><button class="button button-border button-position button-site">SITE</button></p>
                     </a>
                 </div>
             </div>
@@ -162,25 +169,22 @@
                 <div class="overlay">
                     <div class="text">Forever May Fall</div>
                     <a href="https://github.com/dhrandy/forevermayfall-website" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
+                        <button class="button button-border button-position button-code">CODE</button>
                     </a>
                     <a href="https://randy-gentry.com/forevermayfall-website/" target="_blank">
-                        <button class="button button1 button-site">SITE</button>
+                        <button class="button button-border button-position button-site">SITE</button>
                     </a>
                 </div>
             </div>
-            <!-- </div> -->
-            <!-- Second Row -->
-            <!-- <div class="portfolio-container"> -->
             <!-- Handy Soaps Website -->
             <div class="portfolio-item-4"><img src="assets/imgs/handy-soaps-website.jpg" alt="" class="portfolio-image">
                 <div class="overlay">
                     <div class="text">Handy Soaps</div>
                     <a href="https://github.com/dhrandy/handysoaps" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
+                        <button class="button button-border button-position button-code">CODE</button>
                     </a>
                     <a href="https://randy-gentry.com/handysoaps/" target="_blank">
-                        <button class="button button1 button-site">SITE</button>
+                        <button class="button button-border button-position button-site">SITE</button>
                     </a>
                 </div>
             </div>
@@ -189,10 +193,10 @@
                 <div class="overlay">
                     <div class="text">Bird Dog Leatherworks</div>
                     <a href="https://github.com/dhrandy/bird-dog-website" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
+                        <button class="button button-border button-position button-code">CODE</button>
                     </a>
                     <a href="https://randy-gentry.com/bird-dog-website/" target="_blank">
-                        <button class="button button1 button-site">SITE</button>
+                        <button class="button button-border button-position button-site">SITE</button>
                     </a>
                 </div>
             </div>
@@ -201,10 +205,10 @@
                 <div class="overlay">
                     <div class="text">D&R Cable</div>
                     <a href="https://github.com/dhrandy/D-R-Website" target="_blank">
-                        <button class="button button1 button-code">CODE</button>
+                        <button class="button button-border button-position button-code">CODE</button>
                     </a>
                     <a href="https://www.randy-gentry.com/D-R-Website/" target="_blank">
-                        <button class="button button1 button-site">SITE</button>
+                        <button class="button button-border button-position button-site">SITE</button>
                     </a>
                 </div>
             </div>
@@ -214,8 +218,8 @@
     <section id="hobbies">
         <div class="title">
             <h1>HOBBIES</h1>
-            <p class="center hobbies-description">Here are a few of my hobbies.</p>
         </div>
+        <p class="center hobbies-description">Here are a few of my hobbies.</p>
         <div class="hobbies-container">
             <div class="hobbies-column-1">
 
@@ -246,8 +250,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </section>
     <!-- Contact Section -->
@@ -255,6 +257,7 @@
         <div class="title">
             <h1>CONTACT</h1>
         </div>
+        <p class="center contact-description">Questions? Feel free to send me a message.</p>
         <div class="container-form">
             <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8"
                 action="https://formspree.io/dhrandy@gmail.com" method="post">
