fiixed knowledge images

--- a/index.html
+++ b/index.html
@@ -95,24 +95,24 @@ Designed and edited by Randy Gentry.
             <div class="container-item-1">
                 <div class="container-item-1-1">
                     <div class="container-item-1-1-1">
-                        <div class="icon-background"><img src="assets/imgs/html5-icon.png" alt="" class="responsive">
+                        <div class="icon-background"><img src="assets/imgs/html5-icon.png" alt="">
                         </div>
                     </div>
 
                     <div class="container-item-1-1-2">
-                        <div class="icon-background"><img src="assets/imgs/css-icon.png" alt="" class="responsive">
+                        <div class="icon-background"><img src="assets/imgs/css-icon.png" alt="">
                         </div>
                     </div>
 
                 </div>
                 <div class="container-item-2-2">
                     <div class="container-item-1-2-1">
-                        <div class="icon-background"><img src="assets/imgs/react-icon.png" alt="" class="responsive">
+                        <div class="icon-background"><img src="assets/imgs/react-icon.png" alt="">
                         </div>
                     </div>
 
                     <div class="container-item-1-2-2">
-                        <div class="icon-background"><img src="assets/imgs/js-icon.png" alt="" class="responsive"></div>
+                        <div class="icon-background"><img src="assets/imgs/js-icon.png" alt=""></div>
                     </div>
 
                 </div>
