added smooth-scroll, updated css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@ Welcome to my html code!
 Designed and edited by Randy Gentry.
 ==============================================================  
 -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Randy Gentry's Full-stack Web Developer Portfolio</title>
-    <meta name="description" content="Randy Gentry's Full-stack Web Development Portfolio. Here you'll find information about me, my digital downloadable resume, and my portfolio, as well as a way to contact me.">
-    <meta name="keywords" content="graphic design, website builder, webdesign, web design company, website creator, website designer, responsive web design, mobile website design, Web Developer, HTML, JavaScript, Front-end, Back-end, Front End, Back End, Website Builder, Website Developer, Create a Website, Design a Website, Web Design, Randy Gentry, randy-gentry">
+    <meta name="description"
+        content="Randy Gentry's Full-stack Web Development Portfolio. Here you'll find information about me, my digital downloadable resume, and my portfolio, as well as a way to contact me.">
+    <meta name="keywords"
+        content="graphic design, website builder, webdesign, web design company, website creator, website designer, responsive web design, mobile website design, Web Developer, HTML, JavaScript, Front-end, Back-end, Front End, Back End, Website Builder, Website Developer, Create a Website, Design a Website, Web Design, Randy Gentry, randy-gentry">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- ====Font Awesome CSS==== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -134,9 +137,9 @@ Designed and edited by Randy Gentry.
         <div class="title">
             <h1>PORTFOLIO</h1>
         </div>
-        <p class="center portfolio-description">Checkout my Github page for all my projects
-            <a href="https://github.com/dhrandy/" target="_blank">here</a>.
-            Click on the image to go to the URL, click on the button within the image to view the code.</p>
+        <p class="center portfolio-description">Checkout my Github page for all my projects.
+            <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon" target="_blank"></a>
+        </p>
         <div class="portfolio-container">
             <!-- One Nine One Website -->
             <div class="portfolio-item-1">
@@ -298,6 +301,8 @@ Designed and edited by Randy Gentry.
         </div>
     </footer>
     <script src="assets/js/nav.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/14.2.0/smooth-scroll.min.js"></script>
+    <script src="assets/js/scrolling-nav.js"></script>
 </body>
 
 </html>
