added instagram icon

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@ Designed and edited by Randy Gentry.
             <a href="https://www.linkedin.com/in/dhrandy/" class="fab fa-linkedin social-footer foot-icon"
                 target="_blank"></a>
             <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon" target="_blank"></a>
+            <a href="https://www.instagram.com/dhrandy/" class="fab fa-instagram social-footer foot-icon" target="_blank"></a>
         </div>
         <div class="center">
             <div class="footer-link">
