fixed github spacing issue

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Designed and edited by Randy Gentry.
             <h1>PORTFOLIO</h1>
         </div>
         <p class="center portfolio-description">Checkout my Github page for all my projects.
-            <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon" target="_blank"></a>
+            <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon github-icon" target="_blank"></a>
         </p>
         <div class="portfolio-container">
             <!-- One Nine One Website -->
