--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@ Designed and edited by Randy Gentry.
             <h1>PORTFOLIO</h1>
         </div>
         <p class="center portfolio-description">Checkout my Github page for all my projects.
-            <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon github-icon" target="_blank"></a>
+            <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon github-icon"
+                target="_blank"></a>
         </p>
         <div class="portfolio-container">
             <!-- One Nine One Website -->
@@ -285,7 +286,8 @@ Designed and edited by Randy Gentry.
             <a href="https://www.linkedin.com/in/dhrandy/" class="fab fa-linkedin social-footer foot-icon"
                 target="_blank"></a>
             <a href="https://github.com/dhrandy" class="fab fa-github social-footer foot-icon" target="_blank"></a>
-            <a href="https://www.instagram.com/dhrandy/" class="fab fa-instagram social-footer foot-icon" target="_blank"></a>
+            <a href="https://www.instagram.com/dhrandy/" class="fab fa-instagram social-footer foot-icon"
+                target="_blank"></a>
         </div>
         <div class="center">
             <div class="footer-link">
