Consolidating CSS, updated button for iPad

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ Designed and edited by Randy Gentry.
                 <a href="#home">HOME</a>
                 <a href="#knowledge">KNOWLEDGE</a>
                 <a href="#portfolio">PORTFOLIO</a>
-                <a href="#hobby">HOBBIES</a>
+                <a href="#hobbies">HOBBIES</a>
                 <a href="#contact">CONTACT</a>
             </div>
         </div>
